# tui-calendar

./: .gitignore  CONTRIBUTING.md  README.md  mvp.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: data_spec.md
examples/: 2024-10-25-meeting.md  2024-10-27-gym.md  2024-10-30-empty.md  invalid-node.md
notes/: 2026-05-15-done.md  2026-05-15-long-todo.md  2026-05-15-overflow-1.md  2026-05-15-overflow-2.md  2026-05-15-progress.md
src/tui-calendar/: main.py
src/tui_calendar/: main.py
src/tui_calendar/core/: config.py  indexer.py  model.py  watcher.py
src/tui_calendar/ui/components/: day_view.py  month_grid.py  week_view.py
src/tui_calendar/ui/screens/: dialogs.py
tests/: test_conifg.py  test_creation.py  test_indexer.py  test_watcher.py
